added text to pictues incase they dont show

--- a/index.html
+++ b/index.html
@@ -14,16 +14,19 @@
     <nav>JWIZ/The FrontEnd Wizard</nav>
 
     <!-- Massimo Margagnoni -->
-    <img src="/photo.blog/pictures/Picture 1.jpg"><img src="/photo.blog/pictures/Picture 2.jpg"><img
-        src="/photo.blog/pictures/Picture 3.jpg">
+    <img src="/photo.blog/pictures/Picture 1.jpg" alt="image" loading="lazy"><img
+        src="/photo.blog/pictures/Picture 2.jpg" alt="image" loading="lazy"><img
+        src="/photo.blog/pictures/Picture 3.jpg" alt="image" loading="lazy">
 
     <!-- Giuseppe Milo -->
-    <img src="/photo.blog/pictures/Picture 4.jpg"><img src="/photo.blog/pictures/Picture 5.jpg"><img
-        src="/photo.blog/pictures/Picture 6.jpg">
+    <img src="/photo.blog/pictures/Picture 4.jpg" alt="image" loading="lazy"><img
+        src="/photo.blog/pictures/Picture 5.jpg" alt="image" loading="lazy"><img
+        src="/photo.blog/pictures/Picture 6.jpg" alt="image" loading="lazy">
 
     <!-- GörlitzPhotography -->
-    <img src="/photo.blog/pictures/Picture 7.jpg"><img src="/photo.blog/pictures/Picture 8.jpg"><img
-        src="/photo.blog/pictures/Picture 9.jpg">
+    <img src="/photo.blog/pictures/Picture 7.jpg" alt="image" loading="lazy"><img
+        src="/photo.blog/pictures/Picture 8.jpg" alt="image" loading="lazy"><img
+        src="/photo.blog/pictures/Picture 9.jpg" alt="image" loading="lazy">
 
     <!-- All Photos Licensed Under Creative Commons 2.0 -->
     <!-- https://creativecommons.org/licenses/by/2.0/legalcode  -->
