changed the alt text for the pictures and modified the pathway to them

--- a/index.html
+++ b/index.html
@@ -14,19 +14,17 @@
     <nav>JWIZ/The FrontEnd Wizard</nav>
 
     <!-- Massimo Margagnoni -->
-    <img src="/photo.blog/pictures/Picture 1.jpg" alt="image" loading="lazy"><img
-        src="/photo.blog/pictures/Picture 2.jpg" alt="image" loading="lazy"><img
-        src="/photo.blog/pictures/Picture 3.jpg" alt="image" loading="lazy">
+    <img src="./pictures/Picture 1.jpg" alt="Margagnoni" loading="lazy"><img src="./pictures/Picture 2.jpg"
+        alt="Margagnoni" loading="lazy"><img src="./pictures/Picture 3.jpg" alt="Margagnoni" loading="lazy">
 
     <!-- Giuseppe Milo -->
-    <img src="/photo.blog/pictures/Picture 4.jpg" alt="image" loading="lazy"><img
-        src="/photo.blog/pictures/Picture 5.jpg" alt="image" loading="lazy"><img
-        src="/photo.blog/pictures/Picture 6.jpg" alt="image" loading="lazy">
+    <img src="./pictures/Picture 4.jpg" alt="Giuseppe Milo" loading="lazy"><img src="./pictures/Picture 5.jpg"
+        alt="Giuseppe Milo" loading="lazy"><img src="./pictures/Picture 6.jpg" alt="Giuseppe Milo" loading="lazy">
 
     <!-- GörlitzPhotography -->
-    <img src="/photo.blog/pictures/Picture 7.jpg" alt="image" loading="lazy"><img
-        src="/photo.blog/pictures/Picture 8.jpg" alt="image" loading="lazy"><img
-        src="/photo.blog/pictures/Picture 9.jpg" alt="image" loading="lazy">
+    <img src="./pictures/Picture 7.jpg" alt="GörlitzPhotography" loading="lazy"><img src="./pictures/Picture 8.jpg"
+        alt="GörlitzPhotography" loading="lazy"><img src="./pictures/Picture 9.jpg" alt="GörlitzPhotography"
+        loading="lazy">
 
     <!-- All Photos Licensed Under Creative Commons 2.0 -->
     <!-- https://creativecommons.org/licenses/by/2.0/legalcode  -->
